--- a/src/ui/system/AddCommunityFrame.form
+++ b/src/ui/system/AddCommunityFrame.form
@@ -92,20 +92,18 @@
                           </Group>
                           <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="txtName" min="-2" pref="175" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                                  <Component id="lblCity" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                                  <Component id="txtCity" max="32767" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="txtZipCode" min="-2" pref="170" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="lblZipCode1" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="jtxtInhabitants" min="-2" pref="164" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="txtName" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
+                              <Component id="txtZipCode" min="-2" pref="170" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="lblZipCode1" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblCity" alignment="1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="cbbCity" max="32767" attributes="0"/>
+                              <Component id="jtxtInhabitants" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -121,7 +119,7 @@
                       <Component id="lblName" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="txtName" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="lblCity" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtCity" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="cbbCity" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
@@ -153,8 +151,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtName">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtCity">
-        </Component>
         <Component class="javax.swing.JLabel" name="lblAddress">
           <Properties>
             <Property name="text" type="java.lang.String" value="Address:"/>
@@ -180,6 +176,20 @@
               <Format format="#0" subtype="-1" type="0"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="cbbCity">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="3">
+                <StringItem index="0" value="Boston"/>
+                <StringItem index="1" value="Malden"/>
+                <StringItem index="2" value="Cambridge"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
